
Runtime system:
- PR#6517: use ISO C99 types {,u}int{32,64}_t in preference to our homegrown
  types {,u}int{32,64}.
  (Xavier Leroy)

Standard library:
- PR#6577: improve performance of %L, %l, %n, %S, %C format specifiers
  (Alain Frisch)

Type system:
- PR#6374: allow "_ t" as a short-hand for "(_, _, ..) t" for n-ary type
  constructors (Alain Frisch)

OCaml 4.02.1:
-------------

- PR#4099: Bug in Makefile.nt: won't stop on error (George Necula)
- PR#6466: Non-exhaustive matching warning message for open types is confusing
- PR#6529: fix quadratic-time algorithm in Consistbl.extract.
  (Xavier Leroy)
- PR#6554: fix race condition when retrieving backtraces (Jérémie Dimino,
  Mark Shinwell).

Ocaml 4.02.0:
-------------

(Changes that can break existing programs are marked with a "*")

Language features:
- Attributes and extension nodes
  (Alain Frisch)
- Generative functors (PR#5905)
  (Jacques Garrigue)
- Module aliases
  (Jacques Garrigue)
* Alternative syntax for string literals {id|...|id} (can break comments)
  (Alain Frisch)
- Separation between read-only strings (type string) and read-write byte
  sequences (type bytes). Activated by command-line option -safe-string.
  (Damien Doligez)
- PR#6318: Exception cases in pattern matching
  (Jeremy Yallop, backend by Alain Frisch)
- PR#5584: Extensible open datatypes
  (Leo White)

Build system for the OCaml distribution:
- Use -bin-annot when building.
- Use GNU make instead of portable makefiles.
- Updated build instructions for 32-bit Mac OS X on Intel hardware.

Shedding weight:
* Removed Camlp4 from the distribution, now available as third-party software.
* Removed Labltk from the distribution, now available as a third-party library.

Type system:
* PR#6235: Keep typing of pattern cases independent in principal mode
  (i.e. information from previous cases is no longer used when typing
  patterns; cf. 'PR#6235' in testsuite/test/typing-warnings/records.ml)
  (Jacques Garrigue)