@@ -33,18 +33,18 @@ let freshen mty =
 let rec strengthen env mty p =
   match scrape env mty with
     Mty_signature sg ->
-      Mty_signature(strengthen_sig env sg p)
+      Mty_signature(strengthen_sig env sg p 0)
   | Mty_functor(param, arg, res)
     when !Clflags.applicative_functors && Ident.name param <> "*" ->
       Mty_functor(param, arg, strengthen env res (Papply(p, Pident param)))
   | mty ->
       mty
 
-and strengthen_sig env sg p =
+and strengthen_sig env sg p pos =
   match sg with
     [] -> []
   | (Sig_value(id, desc) as sigelt) :: rem ->
-      sigelt :: strengthen_sig env rem p
+      sigelt :: strengthen_sig env rem p (pos+1)
   | Sig_type(id, decl, rs) :: rem ->
       let newdecl =
         match decl.type_manifest, decl.type_private, decl.type_kind with
@@ -59,13 +59,18 @@ and strengthen_sig env sg p =
             else
               { decl with type_manifest = manif }
       in
-      Sig_type(id, newdecl, rs) :: strengthen_sig env rem p
+      Sig_type(id, newdecl, rs) :: strengthen_sig env rem p pos
   | (Sig_typext(id, ext, es) as sigelt) :: rem ->
-      sigelt :: strengthen_sig env rem p
+      sigelt :: strengthen_sig env rem p (pos+1)
   | Sig_module(id, md, rs) :: rem ->
-      let str = strengthen_decl env md (Pdot(p, Ident.name id, nopos)) in
+      let str =
+        if Env.is_functor_arg p env then
+          strengthen_decl env md (Pdot(p, Ident.name id, pos))
+        else
+          {md with md_type = Mty_alias (Pdot(p, Ident.name id, pos))}
+      in
       Sig_module(id, str, rs)
-      :: strengthen_sig (Env.add_module_declaration id md env) rem p
+      :: strengthen_sig (Env.add_module_declaration id md env) rem p (pos+1)
       (* Need to add the module in case it defines manifest module types *)
   | Sig_modtype(id, decl) :: rem ->
       let newdecl =
@@ -76,12 +81,12 @@ and strengthen_sig env sg p =
             decl
       in
       Sig_modtype(id, newdecl) ::
-      strengthen_sig (Env.add_modtype id decl env) rem p
+      strengthen_sig (Env.add_modtype id decl env) rem p pos
       (* Need to add the module type in case it is manifest *)
   | (Sig_class(id, decl, rs) as sigelt) :: rem ->
-      sigelt :: strengthen_sig env rem p
+      sigelt :: strengthen_sig env rem p (pos+1)
   | (Sig_class_type(id, decl, rs) as sigelt) :: rem ->
-      sigelt :: strengthen_sig env rem p
+      sigelt :: strengthen_sig env rem p pos
 
 and strengthen_decl env md p =
   {md with md_type = strengthen env md.md_type p}
